log/build_2021-10-24_02-59-18/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 75
    if (theta_l > 0.0 && theta_r > 0.0):
                       ^
SyntaxError: invalid syntax

